--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="chapter1.html">Chapter 01</a>
         </li>
         <li>
-            <a href=""></a>
+            <a href="/chapter2.html">Chapter 02</a>
         </li>
     </ul>
 </body>
